<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:background="@color/colorPrimaryDark"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_left"
                android:onClick="back"
                tools:ignore="OnClick"
                android:padding="5dp"
                android:tint="@color/white" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/settings"
                android:fontFamily="@font/comfortaa_bold"
                android:layout_gravity="center"/>
        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="#eaeaea"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="25dp"
            android:paddingBottom="5dp"
            android:text="@string/my_location"
            android:visibility="gone"
            android:fontFamily="@font/comfortaa_bold"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <Switch
                android:id="@+id/locationSetting"
                android:layout_gravity="right"
                android:layout_marginRight="15dp"
                android:switchPadding="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/keep_my_location" />
        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginTop="20dp"
            android:visibility="gone"
            android:background="#eaeaea"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingLeft="25dp"
            android:paddingBottom="5dp"
            android:text="@string/map_view"
            android:fontFamily="@font/comfortaa_bold"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Switch
                android:id="@+id/mapviewSetting"
                android:layout_gravity="right"
                android:layout_marginRight="15dp"
                android:switchPadding="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/satellite_mode" />
        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginTop="20dp"
            android:background="#eaeaea"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingLeft="25dp"
                android:paddingBottom="5dp"
                android:text="@string/report_when_save"
                android:fontFamily="@font/comfortaa_bold"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Switch
                    android:id="@+id/reportSetting"
                    android:layout_gravity="right"
                    android:layout_marginRight="15dp"
                    android:switchPadding="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/auto_report" />
            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_marginTop="20dp"
                android:background="#eaeaea"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1" />
    </LinearLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:visibility="gone"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"/>
</FrameLayout>






























