<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/white_rect_fill">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_alert_header">
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="#fff"
                android:layout_margin="18dp"
                android:singleLine="true"
                android:ellipsize="end"
                android:text="@string/add_route_desc"
                android:layout_gravity="center"/>
            <ImageView
                android:id="@+id/btn_cancel"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:padding="3dp"
                android:src="@drawable/cancelicon"
                android:layout_gravity="right"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"/>
        </FrameLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">
            <EditText
                android:id="@+id/nameBox"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:background="@drawable/primary_rect_stroke"
                android:padding="10dp"
                android:gravity="start"
                android:singleLine="true"
                android:hint="@string/route_name"
                android:textColorHint="@color/gray"
                android:textColor="@color/text"/>
            <EditText
                android:id="@+id/descriptionBox"
                android:layout_margin="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:background="@drawable/primary_rect_stroke"
                android:padding="10dp"
                android:gravity="start"
                android:minLines="3"
                android:hint="@string/write_something_optional"
                android:textColorHint="@color/gray"
                android:textColor="@color/text"/>

            <CheckBox
                android:id="@+id/auto_report"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:buttonTint="@color/colorPrimaryDark"
                android:text="@string/auto_report"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textColor="@color/text"
                android:text="※連続で記録できるのは、最大12時間です。"/>

            <TextView
                android:id="@+id/btn_ok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/primary_rect_fill"
                android:text="@string/ok"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:padding="8dp"
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>





























