<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/activity"
    tools:context=".main.ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:background="@color/colorPrimaryDark"
            android:gravity="center_vertical">
            <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:background="@color/transparent"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_left"
                android:onClick="back"
                android:tint="@color/white"
                tools:ignore="OnClick" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/my_profile"
                android:fontFamily="@font/comfortaa_bold"
                android:layout_gravity="center"/>
        </FrameLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <FrameLayout
                    android:id="@+id/pictureFrame"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/pictureBox"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        app:civ_border_width="2dp"
                        app:civ_border_color="#fff"
                        android:scaleType="centerCrop"
                        android:src="@drawable/user"/>
                    <ImageView
                        android:id="@+id/cameraButton"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:alpha="0.2"
                        android:layout_marginTop="62dp"
                        android:layout_gravity="center_horizontal|bottom"
                        android:src="@drawable/cameraico"/>
                </FrameLayout>

                <TextView
                    android:id="@+id/emailBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/my_email"
                    android:lineSpacingExtra="5dp"
                    android:textColor="@color/text"
                    android:textSize="14sp"
                    android:padding="15dp"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/cumulative"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cumulative_distance"
                    android:lineSpacingExtra="5dp"
                    android:textColor="@color/text"
                    android:textSize="14sp"
                    android:padding="10dp"
                    android:gravity="center"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:theme="@style/TextInputLayoutAppearance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="15dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nameBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="15dp"
                        android:paddingBottom="18dp"
                        android:hint="@string/full_name"
                        android:inputType="textCapWords"
                        android:textColor="@color/text"
                        android:textSize="18sp"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:theme="@style/TextInputLayoutAppearance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="15dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phoneBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="15dp"
                        android:paddingBottom="18dp"
                        android:hint="@string/phone_number"
                        android:inputType="phone"
                        android:textColor="@color/text"
                        android:textSize="18sp"/>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:fontFamily="@font/comfortaa_bold"
                    android:onClick="toResetPassword"
                    android:text="@string/reset_password"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="20dp"
                    tools:ignore="OnClick" />

                <TextView
                    android:id="@+id/saveBtn"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:background="@drawable/primarydark_round_fill"
                    android:text="@string/save"
                    android:gravity="center"
                    android:paddingBottom="2dp"
                    android:textSize="19sp"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:alpha="0.3"
                    android:onClick="saveProfile"
                    android:fontFamily="@font/comfortaa_bold"
                    android:layout_marginTop="50dp"
                    tools:ignore="OnClick" />

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:text="@string/logout"
                    android:gravity="center"
                    android:paddingBottom="2dp"
                    android:textSize="16sp"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:onClick="logout"
                    android:fontFamily="@font/comfortaa_bold"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="30dp"
                    tools:ignore="OnClick" />

            </LinearLayout>

        </ScrollView>


    </LinearLayout>

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/loading_bar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:visibility="gone"
        app:indicator="LineSpinFadeLoader"
        app:indicator_color="#F53700" />

</FrameLayout>



























