<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/activity"
    tools:context=".main.ResetPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageButton
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:background="@android:color/transparent"
                android:onClick="back"
                android:src="@drawable/ic_left"
                android:tint="@color/text"
                tools:ignore="OnClick,SpeakableTextPresentCheck" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text"
                android:textSize="20sp"
                android:text="@string/reset_password_title"
                android:fontFamily="@font/comfortaa_bold"
                android:layout_gravity="center"/>
        </FrameLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:theme="@style/TextInputLayoutAppearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="50dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/oldPasswordBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingBottom="18dp"
                android:hint="@string/old_password"
                android:inputType="textPassword"
                android:textColor="@color/text"
                android:textSize="18sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:theme="@style/TextInputLayoutAppearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="15dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/newPasswordBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingBottom="18dp"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:textColor="@color/text"
                android:textSize="18sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:theme="@style/TextInputLayoutAppearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="15dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirmPasswordBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingBottom="18dp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:textColor="@color/text"
                android:textSize="18sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/submitBtn"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:background="@drawable/primarydark_round_fill"
            android:text="@string/submit"
            android:gravity="center"
            android:paddingBottom="2dp"
            android:textSize="19sp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:alpha="0.3"
            android:onClick="updatePassword"
            android:fontFamily="@font/comfortaa_bold"
            android:layout_marginTop="50dp"
            tools:ignore="OnClick" />



    </LinearLayout>

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/loading_bar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:visibility="gone"
        app:indicator="LineSpinFadeLoader"
        app:indicator_color="#F53700" />

</FrameLayout>



























